fixtures/gate/accept/def_named_like_primitive.oath
(defn + [] [(a Int)] Int a)
(defn uses-prim [] [(x Int)] Int (+ x x))
