fixtures/gate/reject/nonexhaustive_match.oath
(data C2 [] (A) (B))
(defn bad [] [(x C2)] Int (match x ((A) 0)))
